# ava

./: .drawio  .gitignore  system-arch.drawio
software/: modules.drawio
software/modules/voice-command-center/: docker-compose.yml  pyproject.toml
software/modules/voice-command-center/recorder/: main.py
software/modules/voice-command-center/src/: main.py  notifier.py  responder.py  transcriper.py  translator.py
software/modules/voice-command-center/src/connection/: internet.py
software/modules/voice-command-center/src/database/: client.py  redis.py
software/modules/voice-command-center/src/enums/: command.py  redis.py
software/modules/voice-command-center/src/operators/: notifier.py  responder.py  transcriper.py  translator.py
