[tool.poetry]
name = "voice-command-center"
version = "0.1.0"
description = ""
authors = ["Sivaroot Chuncharoen <sivaroot.ohm@odds.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"
pyaudio = "^0.2.14"
wave = "^0.0.2"
numpy = "^1.26.4"
librosa = "^0.10.2.post1"
tensorflow = "^2.16.1"
soundfile = "^0.12.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
ipython = "^8.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
