[tool.poetry]
name = "voice-command-center"
version = "0.1.0"
description = ""
authors = ["Sivaroot Chuncharoen <sivaroot.ohm@odds.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"
pyaudio = "^0.2.14"
numpy = "^1.26.4"
speechrecognition = "^3.10.4"
gtts = "^2.5.1"
pydub = "^0.25.1"
pymongo = "^4.7.2"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
